Archive2/60/1685b31b69eea2/output
+ clang++ -std=c++11 -Wall -pedantic main.cpp
main.cpp:28:5: error: no matching function for call to object of type 'overloaded<<lambda at main.cpp:28:14> >'
    overload([](int){})(42);
    ^~~~~~~~~~~~~~~~~~~
main.cpp:20:10: note: candidate template ignored: couldn't infer template argument ''
    void operator()(T){}
         ^
1 error generated.
